--- a/app/src/main/res/layout/fragment_for_film.xml
+++ b/app/src/main/res/layout/fragment_for_film.xml
@@ -32,6 +32,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="5sp"
+                android:background="@color/colorPrimaryDark"
                 android:layout_marginLeft="10sp"
                 android:layout_marginRight="10sp"
                 android:text="название фильма"
@@ -59,7 +60,7 @@
                 android:layout_marginBottom="5sp"
                 android:layout_weight="1"
                 android:background="@color/colorFondoClaro"
-                android:text="Далее" />
+                android:text="@string/strBtnDetail" />
 
         </LinearLayout>
     </LinearLayout>
