--- a/app/src/main/res/layout-land/activity_detail_film.xml
+++ b/app/src/main/res/layout-land/activity_detail_film.xml
@@ -11,34 +11,36 @@
         android:id="@+id/imageViewFilm"
         android:layout_width="197dp"
         android:layout_height="183dp"
+        android:layout_marginTop="16dp"
         android:src="@drawable/logo_film_id12"
-        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:layout_editor_absoluteY="36dp"></ImageView>
+        app:layout_constraintTop_toTopOf="parent"></ImageView>
 
     <TextView
         android:id="@+id/textViewNameFilm"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
+        android:layout_width="421dp"
+        android:layout_height="42dp"
+        android:layout_marginStart="64dp"
         android:text="название фильма"
-        android:textSize="20dp"
+        android:textAlignment="center"
+        android:textSize="25dp"
+        android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.497"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageViewFilm"></TextView>
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toEndOf="@+id/imageViewFilm"
+        tools:layout_editor_absoluteY="16dp"></TextView>
 
     <TextView
         android:id="@+id/textViewDescripFilm"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="430dp"
+        android:layout_height="229dp"
         android:text="описание"
+        android:textAlignment="center"
         android:textSize="20dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textViewNameFilm"
-        app:layout_constraintVertical_bias="0.272"></TextView>
+        app:layout_constraintHorizontal_bias="0.269"
+        app:layout_constraintStart_toEndOf="@+id/imageViewFilm"
+        app:layout_constraintTop_toBottomOf="@+id/textViewNameFilm"></TextView>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
