--- a/app/src/main/res/layout/fragment_for_film.xml
+++ b/app/src/main/res/layout/fragment_for_film.xml
@@ -51,16 +51,36 @@
                 android:textSize="15sp"
                 android:layout_weight="8"/>
 
-            <Button
-                android:id="@+id/btnMore"
+
+            <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="31dp"
-                android:layout_marginLeft="10sp"
-                android:layout_marginRight="10sp"
-                android:layout_marginBottom="5sp"
-                android:layout_weight="1"
-                android:background="@color/colorFondoClaro"
-                android:text="@string/strBtnDetail" />
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
+
+                <Button
+                    android:id="@+id/btnMore"
+                    android:layout_width="165dp"
+                    android:layout_height="31dp"
+                    android:layout_marginLeft="10sp"
+                    android:layout_marginRight="10sp"
+                    android:layout_marginBottom="5sp"
+                    android:layout_weight="1"
+                    android:background="@color/colorFondoClaro"
+                    android:text="@string/strBtnDetail" />
+
+                <Button
+                    android:id="@+id/btnShare"
+                    android:layout_width="match_parent"
+                    android:layout_height="31dp"
+                    android:layout_marginLeft="10sp"
+                    android:layout_marginRight="10sp"
+                    android:layout_marginBottom="5sp"
+                    android:layout_weight="1"
+                    android:background="@color/colorFondoClaro"
+                    android:text="@string/strBtnShare" />
+
+            </LinearLayout>
+
 
         </LinearLayout>
     </LinearLayout>
